272 - hermes-definition-registry - Expose all remaining interfaes from DSL definitions as DTOs